--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
     "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "deep-object-diff": "^1.1.0",
+    "lodash": "^4.17.20"
   }
 }
