--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "deep-object-diff": "^1.1.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "tailwindcss": "^2.0.2"
   }
 }
